--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 }
 body {
     background-color: black;
+    transition: all 0.5s;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-container
@@ -48,6 +50,8 @@ body {
     flex-direction: column;
     gap: 20px;
     background-color: #2b2a2a;
+    
+    
     padding: 10px;
     margin-top: 30px;
     border-radius: 20px;
@@ -68,6 +72,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    cursor: pointer;
 }
 
 #select-one>button
@@ -96,9 +101,13 @@ body {
     color: white;
     margin-left: 10px;
     margin-top: 10px;
-    
+    margin-bottom: 10px;
 }
 
+#name
+{
+    color: gray;
+}
 #caption
 {
     color: gray;
@@ -174,6 +183,11 @@ tr:hover{
    border-radius: 50px;
    border: 2px solid rgba(255, 255, 255, 0.342);
    
+}
+
+.fa-solid
+{
+    cursor: pointer;
 }
 
 @media (max-width: 1460px) {
